2011-12-03 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFDictionary.c: Added class functions.
	* Source/GSHashTable.c:
	* Source/GSHashTable.h: Added add, set, replace, and remove functions.

2011-12-02 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.c: Added CFDictionary to build and fixed bug 
	in _CFRuntimeInitStaticInstance().
	* Source/GNUmakefile: Added CFDictionary.c.
	* Source/CFDictionary.m: Removed.
	* Source/GSHashTable.c:
	* Source/CFDictionary.c: Fixed bugs.
	* Source/CFString.c: Modified __CFStringMakeConstantString() to 
	use the new CFDictionary functionality.

2011-12-02 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.c:
	* Source/atomic_ops.h: Specify type for atomic operations.
	* Source/CFDiciontary.c: New CFDictionary implementation in C.

2011-12-01 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GSHashTable.c:
	* Source/GSHashTable.h: Added new function to help iterate through
	hash table.

2011-12-01 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GSHashTable.c:
	* Source/GSHashTable.h: A hash table implementation to be used in
	CFDictionary, CFBag and CFSet.

2011-12-01 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFBase.c: Move standard includes from here...
	* Headers/CoreFoundation/CFBase.h: ...to here.  Also define CFHashCode,
	CFTypeID and CFOptionFlags to be a 64-bit integer, even on Windows.
	* Source/callbacks.h:
	* Source/CFArray.c:
	* Source/CFRuntime.c: Moved callback functions for retain/release 
	of CFTypeRef in collection objects.

2011-11-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.c: Do not set NSCFTypeClass in CFInitialize().

2011-11-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFArray.c: Fixed quicksort algorithm.

2011-11-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.c:
        * Source/NSCFType.h:
        * Source/NSCFType.m:
        * Source/NSCFArray.m:
        * Source/NSCFData.m:
        * Source/NSCFError.m: